# cfn-windows-userdata-sample

./: .pre-commit-config.yaml  .yamllint  LICENSE  README.md  pyproject.toml
cloudformation/parameters/sample01/: stack-security-group.json  stack-vpc.json
cloudformation/templates/: stack-ec2.yml  stack-security-group.yml  stack-vpc.yml
parameters/parameters/sample01/: stack-ec2.json
templates/: stack-security-group.yml
